--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "build:href": "ng build --base-href ./",
     "delete:docs": "del docs",
-    "copy:dist": "copyfiles dist/heroes-app/browser/* ./docs -f",
+    "copy:dist": "copyfiles dist/form-app/browser/* ./docs -f",
     "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist && del dist"
   },
   "private": true,
